<resources>
    <string name="app_name">Android Assessment App</string>
    <string name="location_activity_label">Google Maps</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view_1">TextView1</string>
    <string name="text_view_2">TextView2</string>
    <string name="text_view_3">TextView3</string>

    <string name="button_red">Red</string>
    <string name="button_green">Green</string>
    <string name="button_blue">Blue</string>

    <string name="mode_of_transport">Mode of Transport</string>
    <string name="car_duration">Car - %1$s</string>
    <string name="train_duration">Train - %1$s</string>
    <string name="navigation_button">Navigation</string>
    <string name="title_activity_location">LocationActivity</string>

    <string name="google_maps_key">AIzaSyArG62iUwGDYlBr-DERz_13UGS8ZKY1Ax8</string>

    <string name="fragment_a">Fragment A</string>
    <string name="fragment_b">Fragment B</string>
    <string name="fragment_c">Fragment C</string>
    <string name="fragment_d">Fragment D</string>

    <string name="select_item_request">Please Select an Item</string>
    <string name="location_title_text">Location</string>


</resources>
