<ScrollView
    android:id="@+id/root_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.assessment.intelliment.harkirat.androidassessmentapp.Fragments.TestOneFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginBottom="@dimen/layout_margin_bottom"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="@dimen/layout_margin_right"
        android:layout_marginLeft="@dimen/layout_margin_left_short"
        />
    <android.support.v4.view.ViewPager
        android:id="@+id/fragment_viewpager"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginRight="@dimen/layout_margin_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view"
        android:background="@drawable/layout_backgroud"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginBottom="@dimen/layout_margin_bottom"
       />
    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/circle_indicator"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@id/fragment_viewpager"
        android:orientation="horizontal"
        app:ci_drawable_unselected="@drawable/ic_radio_button_unchecked_black_24dp"
        app:ci_drawable="@drawable/ic_arrow_drop_down_black_24dp"
        android:gravity="center"
        app:ci_margin="@dimen/circle_indicator_margin"
        />
    <LinearLayout
        android:id="@+id/liner_text_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/fragment_viewpager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/layout_backgroud"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginRight="@dimen/layout_margin_right"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginBottom="@dimen/layout_margin_bottom"

        >
        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_margin_top"
            android:layout_marginBottom="@dimen/text_view_margin_bottom"
            android:gravity="left"
            android:text="@string/text_view_1"
            android:fontFamily="monospace"

            />
        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/text_view_margin_top"
            android:layout_marginBottom="@dimen/text_view_margin_bottom"
            android:text="@string/text_view_2"
            android:fontFamily="monospace"/>
        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_margin_top"
            android:layout_marginBottom="@dimen/text_view_margin_bottom"
            android:gravity="right"
            android:text="@string/text_view_3"
            android:fontFamily="monospace"/>
    </LinearLayout>
    <TextView
        android:id="@+id/item_selected_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_margin_top"
        android:layout_marginBottom="@dimen/text_view_margin_bottom"
        android:layout_marginRight="@dimen/layout_margin_right"
        android:layout_marginLeft="@dimen/layout_margin_left"
        app:layout_constraintTop_toBottomOf="@id/liner_text_views"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/select_item_request"
        android:background="@drawable/layout_backgroud"
        />

    <LinearLayout
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginRight="@dimen/layout_margin_right"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginBottom="@dimen/layout_margin_bottom"
        android:id="@+id/linear_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_selected_text"
        tools:layout_editor_absoluteY="468dp"
        android:background="@color/layout_background">


        <Button
            android:id="@+id/button_red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_red"
            android:background="@drawable/color_button_shape"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/colorRed"
            android:elevation="@dimen/button_elevation"
            android:textColor="@color/button_text"
            />

        <Button
            android:id="@+id/button_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_blue"
            android:background="@drawable/color_button_shape"
            android:layout_margin="@dimen/button_margin"
            android:backgroundTint="@color/colorBlue"
            android:elevation="@dimen/button_elevation"
            android:textColor="@color/button_text"
            />

        <Button
            android:id="@+id/button_green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_green"
            android:background="@drawable/color_button_shape"
            android:backgroundTint="@color/colorGreen"
            android:layout_margin="@dimen/button_margin"
            android:elevation="@dimen/button_elevation"
            android:textColor="@color/button_text"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
</ScrollView>
