<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/location_title_text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/location_title_text"
        android:layout_marginTop="@dimen/text_view_margin_top"
        android:paddingLeft="@dimen/text_view_padding_left"
        />
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/location_spinner"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginRight="@dimen/layout_margin_right"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_title_text"
        android:layout_marginBottom="@dimen/spinner_margin_bottom"
        style="@android:style/Widget.Material.Spinner.Underlined"

        />
    <TextView
        android:id="@+id/transport_mode_text_view"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/location_spinner"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/mode_of_transport"
        android:layout_marginTop="@dimen/text_view_margin_top"
        android:layout_marginBottom="@dimen/text_view_margin_bottom"
        android:paddingLeft="@dimen/text_view_padding_left"
        />
    <LinearLayout
        android:id="@+id/travel_duration_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginRight="@dimen/layout_margin_right"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginBottom="@dimen/layout_margin_bottom"
        android:background="@drawable/layout_backgroud"
        app:layout_constraintTop_toBottomOf="@id/transport_mode_text_view"
        >
        <TextView
            android:id="@+id/car_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_margin_top"
            android:paddingLeft="@dimen/text_view_padding_left"

            />
        <TextView
            android:id="@+id/train_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_view_padding_left"
            android:layout_marginBottom="@dimen/text_view_margin_bottom"/>

    </LinearLayout>

    <Button
        android:id="@+id/navigation_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="@dimen/navigation_button_margin_top"
        android:text="@string/navigation_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/travel_duration_layout"
        android:background="@drawable/color_button_shape"
        android:elevation="@dimen/button_elevation"
        android:backgroundTint="@color/light_red"
        android:textColor="@color/button_text"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>